Configure React app for deployment to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task_1_recoil",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Amr-Zazu.github.io/React-List-Add-Delete-Using-Recoil",
+  "homepage": "https://Amr-Zazu.github.io/Amr-Zazu.github.io",
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.2",
     "bootstrap": "^5.2.3",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
